WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
29755
ASSERTION FAILED: !repaintContainer || repaintContainer == this
https://bugs.webkit.org/show_bug.cgi?id=29755
Summary
ASSERTION FAILED: !repaintContainer || repaintContainer == this
Simon Fraser (smfr)
Reported
2009-09-25 17:28:00 PDT
Certain configurations of hardware accelerated content hit this assertion in RenderView. It indicates that RenderObject::container() returned an object above repaintContainer in the hierarchy. It's triggered by compositing layers made for opacity fades in between position: absolute layers.
Attachments
Patch
(12.67 KB, patch)
2009-09-25 17:46 PDT
,
Simon Fraser (smfr)
no flags
Details
Formatted Diff
Diff
Better fix
(10.32 KB, patch)
2009-09-29 17:04 PDT
,
Simon Fraser (smfr)
mitz: review+
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Simon Fraser (smfr)
Comment 1
2009-09-25 17:28:25 PDT
<
rdar://problem/7032254
>
Simon Fraser (smfr)
Comment 2
2009-09-25 17:46:11 PDT
Created
attachment 40155
[details]
Patch
Simon Fraser (smfr)
Comment 3
2009-09-28 09:14:46 PDT
http://trac.webkit.org/changeset/48816
Simon Fraser (smfr)
Comment 4
2009-09-29 14:26:42 PDT
This fix doesn't get all cases.
Simon Fraser (smfr)
Comment 5
2009-09-29 16:59:51 PDT
***
Bug 28898
has been marked as a duplicate of this bug. ***
Simon Fraser (smfr)
Comment 6
2009-09-29 17:04:27 PDT
Created
attachment 40335
[details]
Better fix
Eric Seidel (no email)
Comment 7
2009-09-29 18:26:08 PDT
Comment on
attachment 40155
[details]
Patch Obsoleting this patch that looks like it was already landed.
Simon Fraser (smfr)
Comment 8
2009-09-30 11:02:01 PDT
http://trac.webkit.org/changeset/48932
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug